--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - CV</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Your Name</h1>
+        <p>PhD Student in Photonics at Leibniz IPHT</p>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Brief introduction about your background, research interests, and current position.</p>
+    </section>
+
+    <section id="cv">
+        <h2>Curriculum Vitae</h2>
+        <p>Link to download a full PDF of your CV.</p>
+        <!-- Add your experience, education, etc. here -->
+    </section>
+
+    <section id="projects">
+        <h2>Projects & Publications</h2>
+        <ul>
+            <li>Project 1 - <a href="link-to-project1">Link to Project</a></li>
+            <li>Publication 1 - <a href="link-to-publication1">Link to Publication</a></li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: your.email@example.com</p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/yourusername">Your LinkedIn</a></p>
+    </section>
+
+</body>
+</html>
 
